--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
@@ -20,37 +20,35 @@ nav {
   justify-content: end;
   align-items: center;
   padding: 8px 30px;
- height: 60px;
-  background-color: #8B0000;
+  height: 60px;
+  background-color: #8b0000;
   position: sticky;
   top: 0px;
 
   z-index: 80;
 }
-nav a{
+nav a {
   margin-right: auto;
-
 }
-nav  img {
+nav img {
   width: 40px;
-  height: 40px;;
+  height: 40px;
   border-radius: 50%;
 }
-nav ul{
+nav ul {
   margin-right: auto;
 }
 nav li {
   display: inline;
   margin-left: 25px;
   padding: 6px 2px;
-  color: #F5F5F5;
+  color: #f5f5f5;
   font-size: 15px;
   font-weight: 700;
   position: relative;
-
 }
-nav li::after{
-  content:attr(k) ;
+nav li::after {
+  content: attr(k);
   position: absolute;
   bottom: 0px;
   left: 0;
@@ -62,13 +60,11 @@ nav li::after{
   transition: 500ms ease-in-out;
 }
 nav li:hover:after {
-  
   width: 100%;
-
 }
 
-nav button{
-  display:;
+nav button {
+  display: ;
   padding: 5px 10px;
   border-radius: 6px;
   border: none;
@@ -76,22 +72,21 @@ nav button{
   font-weight: 500;
   transition: 300ms;
 }
-nav button:hover{
+nav button:hover {
   background-color: #333333;
   color: #d2d2d2;
   scale: 1.1;
 }
-.NAVID{
-  color: #8B0000;
-font-size: 50px;
-text-align: center;  
-padding: 70px 0px 30px;
-  text-shadow: #edc3c3 0px -25px 8px ;
-
+.NAVID {
+  color: #8b0000;
+  font-size: 50px;
+  text-align: center;
+  padding: 70px 0px 30px;
+  text-shadow: #edc3c3 0px -25px 8px;
 }
 /* ===================================main============================= */
 main {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   width: 100%;
   padding: 10px;
 }
@@ -119,33 +114,31 @@ main .intrdaction {
 }
 
 h2 {
-  border-left: solid #8B0000 7px;
+  border-left: solid #8b0000 7px;
   padding: 5px 10px;
-  color: #8B0000;
-  margin-bottom:10px;
+  color: #8b0000;
+  margin-bottom: 10px;
 }
 main .intrdaction > p {
-  
-  padding:10px;
+  padding: 10px;
   column-count: 2;
   column-gap: 20px;
-  hyphens: auto; 
-  
-  width:90%;
+  hyphens: auto;
+
+  width: 90%;
   margin: 0px auto;
-  font-size:20px;
+  font-size: 20px;
   border: 1px black solid;
   box-shadow: 1px 1px 3px #000000b9;
 }
 main .intrdaction .video {
   max-width: 700px;
 
-  background-color:#333333;
+  background-color: #333333;
   color: white;
 
   padding: 15px;
-  margin:30px auto  ;
-  
+  margin: 30px auto;
 
   border-radius: 10px;
   box-shadow: 1px 0px 8px #000000ae;
@@ -177,7 +170,7 @@ main .intrdaction .video iframe {
   padding: 5px;
 }
 .abouttable thead {
-  background-color: #D4A373;
+  background-color: #d4a373;
   font-size: 25px;
   color: #333333;
 }
@@ -194,7 +187,7 @@ main .intrdaction .video iframe {
   border-bottom: 1px solid #00000022;
 }
 .abouttable tbody:last-child {
-  border-bottom: solid 5px #D4A373;
+  border-bottom: solid 5px #d4a373;
 }
 .abouttable tbody tr:nth-child(even) {
   background-color: #d4a37357;
@@ -232,235 +225,201 @@ img {
   grid-row: span 2;
 }
 
-
-
- .editions {
+.editions {
   background-color: azure;
   margin: 0px auto 40px;
   padding: 20px;
-  max-width:min-content;
-
+  max-width: min-content;
 }
 
-.tabelwrap{
+.tabelwrap {
   overflow-x: scroll;
-  width:min(900px,90%);
-  margin:20px auto;
+  width: min(900px, 90%);
+  margin: 20px auto;
 }
 
-.tabelwrap table{
-  width:max-content;
+.tabelwrap table {
+  width: max-content;
   background-color: #000000;
 }
 
-.tabelwrap table th{
-   font-size:25px;
+.tabelwrap table th {
+  font-size: 25px;
 
-   background-color: #D4A373;
-   padding:10px;
+  background-color: #d4a373;
+  padding: 10px;
 
-   color: #333333;
+  color: #333333;
 }
 
-.tabelwrap table td{
-  background-color: #F5F5F5;
-  padding:5px 20px;
+.tabelwrap table td {
+  background-color: #f5f5f5;
+  padding: 5px 20px;
 }
 
-.tabelwrap tr td:nth-child(1),.tabelwrap tr td:nth-child(2){
-   text-align: center;
+.tabelwrap tr td:nth-child(1),
+.tabelwrap tr td:nth-child(2) {
+  text-align: center;
 }
 
-.tabelwrap tr td:nth-child(1){
- 
+.tabelwrap tr td:nth-child(1) {
   background-color: #8b0000ad;
   backdrop-filter: blur(5px);
   z-index: 3;
 
   border: #000000 solid 2px;
-  color: #F5F5F5;
-  font-size:18px;
+  color: #f5f5f5;
+  font-size: 18px;
   font-weight: 500;
 
-  position:sticky;
-  left:0px;
+  position: sticky;
+  left: 0px;
   top: 0px;
-  
 }
 
-
-
-
-
-.tabelwrap table thead tr th:nth-child(3){
- width:500px;
+.tabelwrap table thead tr th:nth-child(3) {
+  width: 500px;
 }
 
-
-.location{
+.location {
   background-color: azure;
-  padding:10px;
+  padding: 10px;
 }
 
+.address {
+  background-color: #333333;
+  color: #d2d2d2;
 
-
-.address{
-   background-color: #333333;
-   color: #d2d2d2;
-
-   margin:10px;
-   display: flex;
-   justify-content: center;
-   padding: 20px;
-   gap:50px 5% ;
-   flex-wrap: wrap;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  gap: 50px 5%;
+  flex-wrap: wrap;
 }
-.address div{
-   width:40%;
-   min-width: 400px;
-   border-radius:5px;
+.address div {
+  width: 40%;
+  min-width: 400px;
+  border-radius: 5px;
 
-   display: flex;
-   flex-direction: column;
-   gap:10px;
-   padding:20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
 }
-.address iframe{
+.address iframe {
   display: block;
   width: 100%;
- height: 400px;
+  height: 400px;
 }
 
-
-.address h3{
+.address h3 {
   text-align: center;
-  background-color: #8B0000;
-  color:#F5F5F5 ;
-  padding:15px;
+  background-color: #8b0000;
+  color: #f5f5f5;
+  padding: 15px;
   font-size: 25px;
-  border-radius:3px;
+  border-radius: 3px;
 }
 
-.address ul li{
+.address ul li {
   list-style: none;
-  padding:10px;
+  padding: 10px;
   font-size: 18;
   color: #333333;
   font-weight: 500;
   background-color: azure;
-  
 }
 
-
-
-
-
-
-
-
-
-
-.adr1{
-  background-color: #F5F5F5;
+.adr1 {
+  background-color: #f5f5f5;
 }
-.adr2{
-  background-color: #F5F5F5;
-
+.adr2 {
+  background-color: #f5f5f5;
 }
 
-
-
-footer{
+footer {
   background-color: #333333;
-  color: #F5F5F5;
-  padding:10px 0px;
-
+  color: #f5f5f5;
+  padding: 10px 0px;
 
   display: flex;
 }
-footer div{
-  
+footer div {
 }
 
-
-footer .more{
-  padding:20px 40px;
-  width:70%;
+footer .more {
+  padding: 20px 40px;
+  width: 70%;
 }
 
-footer .more h3{
+footer .more h3 {
   font-size: 45px;
-
 }
-footer .more p{
- width:80%;
- padding:15px 40px;
-  font-size:17px;
- 
+footer .more p {
+  width: 80%;
+  padding: 15px 40px;
+  font-size: 17px;
 }
 
-footer .more a{
+footer .more a {
   text-decoration: none;
   color: #dcebf9;
-  font-size:20px;
+  font-size: 20px;
   font-weight: 600;
   background-color: #1e1e1e;
-  display:block;
-  padding:15px;
-  border-radius:10px;
-  margin-top:15px ;
-  margin-left:10px;
-  width:fit-content;
+  display: block;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-left: 10px;
+  width: fit-content;
   transition: 300ms ease-in-out;
 }
-footer .more a:hover{
- transform: translate(20px);
- background-color: #8B0000;
+footer .more a:hover {
+  transform: translate(20px);
+  background-color: #8b0000;
 }
 
-
-
-
-footer .contact-me{
-  height:fit-content;
-  width:30%;
-  border-left:solid rgb(34, 34, 34) 2px;
-  margin-top:50px;
+footer .contact-me {
+  height: fit-content;
+  width: 30%;
+  border-left: solid rgb(34, 34, 34) 2px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap:5px;
+  gap: 5px;
 }
-footer .contact-me h3{
-  font-size:40px;
-  padding:20px 0px 10px;
+footer .contact-me h3 {
+  font-size: 40px;
+  padding: 20px 0px 10px;
 }
-footer .contact-me .clink{
+footer .contact-me .clink {
   background-color: #1e1e1e;
-  border-radius:12px;
-    font-size:35px;
-    width:fit-content;
+  border-radius: 12px;
+  font-size: 35px;
+  width: fit-content;
 
-    display: grid;
-    grid-template-columns: repeat(2,60px);
-    grid-template-rows:repeat(2,60px) ;
-    align-items: center;
-    justify-items: center;
-    transition: 600ms;
-
+  display: grid;
+  grid-template-columns: repeat(2, 60px);
+  grid-template-rows: repeat(2, 60px);
+  align-items: center;
+  justify-items: center;
+  transition: 600ms;
 }
-footer .contact-me .clink:hover{
-  color: #F5F5F5;
-  background-color: #8B0000;
+footer .contact-me .clink:hover {
+  color: #f5f5f5;
+  background-color: #8b0000;
   transform: scale(1.3);
-  box-shadow:#333333 0px 0px 10px 50px;
+  box-shadow: #333333 0px 0px 10px 50px;
 }
-section{
-  width:100%;
+section {
+  width: 100%;
   background: black;
-  color:#d2d2d2;
+  color: #d2d2d2;
   text-align: center;
-  border-top:#353639 solid 1px;
-  padding:10px;
+  border-top: #353639 solid 1px;
+  padding: 10px;
 }
