--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
   align-items: center;
   padding: 8px 30px;
   height: 60px;
-  background-color: #8b0000;
+  background-color: #610101;
   position: sticky;
   top: 0px;
 
@@ -55,7 +55,7 @@ nav li::after {
   border-radius: 10px;
   height: 6px;
   width: 20%;
-  background-color: #ffffff;
+  background-color: #d2d2d2;
 
   transition: 500ms ease-in-out;
 }
@@ -73,17 +73,22 @@ nav button {
   transition: 300ms;
 }
 nav button:hover {
-  background-color: #333333;
+  background-color: #191919;
   color: #d2d2d2;
   scale: 1.1;
 }
 .NAVID {
-  color: #8b0000;
+  color: #610101;
   font-size: 50px;
   text-align: center;
-  padding: 70px 0px 30px;
+  padding: 90px 0px 30px;
   text-shadow: #edc3c3 0px -25px 8px;
 }
+/* .NAVID:first-of-type{
+  padding: 10px 0px 30px;
+
+
+} */
 /* ===================================main============================= */
 main {
   background-color: #f5f5f5;
@@ -92,31 +97,32 @@ main {
 }
 main .title {
   text-align: center;
-  line-height: 35px;
-  padding: 70px 0px;
+  line-height: 45px;
+  padding: 70px 0px 0px;
 }
 main .title h1 {
-  font-size: 65px;
+  font-size: 95px;
 }
 main .title p {
   font-style: italic;
-  font-weight: 500;
+  font-weight: 700;
 }
 /* ----------------------------introdacion---------------------------------------- */
 main .intrdaction {
   background-color: azure;
   padding: 30px 20px;
   border-radius: 10px;
-
+  box-shadow: #333333 2px 2px 10px;
+  
   margin: auto;
   margin-bottom: 50px;
   max-width: 1100px;
 }
 
 h2 {
-  border-left: solid #8b0000 7px;
+  border-left: solid #610101 7px;
   padding: 5px 10px;
-  color: #8b0000;
+  color: #610101;
   margin-bottom: 10px;
 }
 main .intrdaction > p {
@@ -134,7 +140,7 @@ main .intrdaction > p {
 main .intrdaction .video {
   max-width: 700px;
 
-  background-color: #333333;
+  background-color: #1d1d1d;
   color: white;
 
   padding: 15px;
@@ -172,7 +178,7 @@ main .intrdaction .video iframe {
 .abouttable thead {
   background-color: #d4a373;
   font-size: 25px;
-  color: #333333;
+  color: #1e1e1e;
 }
 .abouttable thead tr th:first-child {
   width: 40%;
@@ -181,7 +187,7 @@ main .intrdaction .video iframe {
 .abouttable tbody th {
   text-align: left;
   padding-left: 10px;
-  color: #1b3a5c;
+  color: #562c02;
 }
 .abouttable tbody tr {
   border-bottom: 1px solid #00000022;
@@ -195,7 +201,8 @@ main .intrdaction .video iframe {
 
 .images {
   margin: 0px auto 40px;
-  background-color: azure;
+  background-color: #0f0f0f;
+  max-width:1300px;
   display: grid;
   padding: 5px;
   gap: 5px;
@@ -230,6 +237,8 @@ img {
   margin: 0px auto 40px;
   padding: 20px;
   max-width: min-content;
+  border-radius: 10px;
+  box-shadow: #333333 2px 2px 10px;
 }
 
 .tabelwrap {
@@ -240,7 +249,7 @@ img {
 
 .tabelwrap table {
   width: max-content;
-  background-color: #000000;
+  background-color: #333333;
 }
 
 .tabelwrap table th {
@@ -249,7 +258,7 @@ img {
   background-color: #d4a373;
   padding: 10px;
 
-  color: #333333;
+  color: #151515;
 }
 
 .tabelwrap table td {
@@ -263,7 +272,7 @@ img {
 }
 
 .tabelwrap tr td:nth-child(1) {
-  background-color: #8b0000ad;
+  background-color: #5a0101d7;
   backdrop-filter: blur(5px);
   z-index: 3;
 
@@ -280,48 +289,60 @@ img {
 .tabelwrap table thead tr th:nth-child(3) {
   width: 500px;
 }
-
+/* ----------------------------------location-------------------------------- */
 .location {
   background-color: azure;
   padding: 10px;
 }
 
 .address {
-  background-color: #333333;
-  color: #d2d2d2;
-
-  margin: 10px;
+ background: #0f0f0f;
+  /* width:90%; */
+  /* height: 70vh; */
   display: flex;
-  justify-content: center;
-  padding: 20px;
-  gap: 50px 5%;
+  justify-content:space-around;
+  padding: 20px 0px;
+  gap: 15px;
   flex-wrap: wrap;
 }
 .address div {
   width: 40%;
   min-width: 400px;
-  border-radius: 5px;
+  border-radius: 3px;
+  height:70vh;
 
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   gap: 10px;
   padding: 20px;
+
+  background-color: #e0d4c8;
+  box-shadow: #1e1e1f 0px 6px 20px;
+
 }
 .address iframe {
   display: block;
   width: 100%;
-  height: 400px;
+  box-shadow: #353639 0px 2px 5px;
+
+ 
 }
 
 .address h3 {
   text-align: center;
-  background-color: #8b0000;
+  background-color: #610101;
   color: #f5f5f5;
   padding: 15px;
   font-size: 25px;
-  border-radius: 3px;
-}
+  /* border-radius: 3px; */
+  box-shadow: #353639 0px 2px 5px;
 
+}
+.address ul{
+  box-shadow: #353639 0px 2px 5px;
+
+}
 .address ul li {
   list-style: none;
   padding: 10px;
@@ -331,44 +352,47 @@ img {
   background-color: azure;
 }
 
-.adr1 {
-  background-color: #f5f5f5;
-}
-.adr2 {
-  background-color: #f5f5f5;
-}
 
 footer {
-  background-color: #333333;
+  width: 100%;
+  background-color: #090909;
   color: #f5f5f5;
-  padding: 10px 0px;
 
-  display: flex;
+
+display: grid;
+grid-template-columns: 2fr 1fr
+
+
 }
 
 footer .more {
   padding: 20px 40px;
-  width: 70%;
+}
+footer .contact-me {
+  overflow: hidden;
+  padding:40px;
+  /* background-color: #1b3a5c; */
+  width: 100%;
+
 }
 
 footer .more h3 {
   font-size: 45px;
 }
 footer .more p {
-  width: 80%;
-  padding: 15px 40px;
+
   font-size: 17px;
 }
-
 footer .more a {
-  text-decoration: none;
   color: #dcebf9;
   font-size: 20px;
   font-weight: 600;
   background-color: #1e1e1e;
+
   display: block;
   padding: 15px;
   border-radius: 10px;
+
   margin-top: 15px;
   margin-left: 10px;
   width: fit-content;
@@ -376,29 +400,22 @@ footer .more a {
 }
 footer .more a:hover {
   transform: translate(20px);
-  background-color: #8b0000;
+  background-color: #610101;
 }
 
-footer .contact-me {
-  height: fit-content;
-  width: 30%;
-  border-left: solid rgb(34, 34, 34) 2px;
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-}
+
 footer .contact-me h3 {
-  font-size: 40px;
-  padding: 20px 0px 10px;
+  font-size: 34px;
+  text-align: center;
+  padding-bottom:20px;
 }
+
 footer .contact-me .clink {
   background-color: #1e1e1e;
   border-radius: 12px;
-  font-size: 35px;
+  font-size: 30px;
   width: fit-content;
+  margin: 0 auto;
 
   display: grid;
   grid-template-columns: repeat(2, 60px);
@@ -407,12 +424,24 @@ footer .contact-me .clink {
   justify-items: center;
   transition: 600ms;
 }
+
 footer .contact-me .clink:hover {
-  color: #f5f5f5;
-  background-color: #8b0000;
+  color: #f5f5f59f;
+  background-color: #610101;
   transform: scale(1.3);
-  box-shadow: #333333 0px 0px 10px 50px;
+  translate: 0px -20%;
+  box-shadow: #090909 0px 0px 0px 100px;
 }
+
+footer .contact-me .clink a{
+  transition:300ms;
+}
+footer .contact-me .clink a:hover{
+  scale: 1.1;
+  color: #f5f5f5;
+
+}
+
 section {
   width: 100%;
   background: black;
@@ -420,4 +449,4 @@ section {
   text-align: center;
   border-top: #353639 solid 1px;
   padding: 10px;
-}
+} 
