--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ main .title p {
 }
 /* ----------------------------introdacion---------------------------------------- */
 main .intrdaction {
+  max-width:1300px;
+
   background-color: azure;
   padding: 30px 20px;
   border-radius: 10px;
@@ -116,7 +118,7 @@ main .intrdaction {
   
   margin: auto;
   margin-bottom: 50px;
-  max-width: 1100px;
+  
 }
 
 h2 {
@@ -202,9 +204,9 @@ main .intrdaction .video iframe {
 .images {
   margin: 0px auto 40px;
   background-color: #0f0f0f;
-  max-width:1300px;
+  max-width:1400px;
   display: grid;
-  padding: 5px;
+  padding: 7px;
   gap: 5px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: 200px;
@@ -236,7 +238,7 @@ img {
   background-color: azure;
   margin: 0px auto 40px;
   padding: 20px;
-  max-width: min-content;
+  max-width:1300px;
   border-radius: 10px;
   box-shadow: #333333 2px 2px 10px;
 }
@@ -293,12 +295,16 @@ img {
 .location {
   background-color: azure;
   padding: 10px;
+  max-width:1500px;
+  margin:0 auto 20px;
+  padding: 30px;
+  box-shadow:0px 0px 10px rgba(0, 0, 0, 0.541);
+
 }
 
 .address {
  background: #0f0f0f;
-  /* width:90%; */
-  /* height: 70vh; */
+  
   display: flex;
   justify-content:space-around;
   padding: 20px 0px;
